--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.21",
     "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.508.0",
     "next": "15.2.1",
     "postcss": "^8.5.3",
     "qrcode.react": "^4.2.0",
