--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@uiw/react-md-editor": "^4.0.5",
     "autoprefixer": "^10.4.21",
     "date-fns": "^4.1.0",
+    "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.508.0",
     "next": "15.2.1",
